# SegyIO

./: .travis.yml  CMakeLists.txt  appveyor.yml  requirements.txt
applications/: segyio-crop.c
julia/: CMakeLists.txt  Segyio.jl
lib/: CMakeLists.txt
lib/experimental/segyio/: segyio.hpp
lib/test/: segyio-cpp.cpp
python/segyio/: _trace.py  segy.py  segyio.cpp
python/test/: segy.py
